optimized image and made more accessibility edits

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     </div>
   </nav>
   <header class="masthead text-center text-white d-flex">
+    <div class="image-box__overlay"></div>
     <div class="container my-auto">
       <div class="row header-content">
         <div class="col-lg-10 mx-auto">
@@ -61,82 +62,82 @@
         </div>
       </div>
     </div>
+
   </header>
-  <section class="new-bg bg-primary" id="about">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 mx-auto text-center">
-          <h2 class="section-heading text-white">Web Developer &#183; UI Designer</h2>
-          <hr class="my-4">
-          <p class="text-enlarge text-white mb-4 text-lite bio-paragraph">
-            I love JavaScript and nerd out on ways we can make our online experiences more accessible - whether that's choosing the right color pallet, coding accessible animations, or developing for screen readers.
-            <br><br>
-            On the weekends, you can find me rock climbing at Boulder Canyon or trail running at Marshall Mesa.
-        </div>
-      </div>
-    </div>
-  </section>
-  <section id="services">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading">My skills</h2>
-          <hr class="my-4">
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4 col-md-6 text-center">
-          <div class="service-box mt-5 mx-auto raleway-projects">
-            <i class="fa fa-4x fa-paint-brush icon-primary mb-3 sr-icons"></i>
-            <h3 class="skill-title mb-3">Front-end</h3>
-            <p class="text-muted mb-0 ">HTML5 &#183; CSS &#183; SASS</p>
-            <p class="text-muted mb-0">JavaScript &#183; ES6 &#183; jQuery</p>
-            <p class="text-muted mb-0">React.js</p>
-            <p class="text-muted mb-0">D3.js</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 text-center">
-          <div class="service-box mt-5 mx-auto raleway-projects">
-            <i class="fa fa-4x fa-cogs icon-primary mb-3 sr-icons"></i>
-            <h3 class="skill-title mb-3">Back-end</h3>
-            <p class="text-muted mb-0">Node.js</p>
-            <p class="text-muted mb-0">Express.js</p>
-            <p class="text-muted mb-0">Knex.js</p>
-            <p class="text-muted mb-0">SQL</p>
-            <p class="text-muted mb-0">PostgreSQL</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 text-center">
-          <div class="service-box mt-5 mx-auto raleway-projects">
-            <i class="fa fa-4x fa-check-square-o icon-primary mb-3 sr-icons"></i>
-            <h3 class="skill-title mb-3">Test driven <br> development</h3>
-            <p class="text-muted mb-0">Chai</p>
-            <p class="text-muted mb-0">Mocha</p>
-            <p class="text-muted mb-0">Supertest</p>
+  <main>
+    <section class="new-bg bg-primary" id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto text-center">
+            <h2 class="section-heading text-white">Web Developer &#183; UI Designer</h2>
+            <hr class="my-4">
+            <p class="text-enlarge text-white mb-4 text-lite bio-paragraph">
+              I love JavaScript and nerd out on ways we can make our online experiences more accessible - whether that's choosing the right color pallet, coding accessible animations, or developing for screen readers.
+              <br><br> On the weekends, you can find me rock climbing at Boulder Canyon or trail running at Marshall Mesa.
           </div>
         </div>
       </div>
-    </div>
-  </section>
-  <section class="p-0 raleway" id="portfolio">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading portfolio-heading">Most recent project</h2>
-          <!-- <p class="info-text mb-0 hint-text">click images to see more</p> -->
-          <hr class="my-4 project-line">
+    </section>
+    <section id="services">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading">My skills</h2>
+            <hr class="my-4">
+          </div>
         </div>
       </div>
-    </div>
-    <div class="container container-center">
-    </div>
-    <div class="container-fluid p-0">
-      <div class="row no-gutters">
-        <!--  Mountain project preview -->
-        <div class="col-lg-6 col-sm-12 image-tile container-center" id="mountain-project">
-          <a class="portfolio-box" href=# data-toggle="modal" data-target=".mp" role="button">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 col-md-6 text-center">
+            <div class="service-box mt-5 mx-auto raleway-projects">
+              <i class="fa fa-4x fa-paint-brush icon-primary mb-3 sr-icons"></i>
+              <h3 class="skill-title mb-3">Front-end</h3>
+              <p class="text-muted mb-0 ">HTML5 &#183; CSS &#183; SASS</p>
+              <p class="text-muted mb-0">JavaScript &#183; ES6 &#183; jQuery</p>
+              <p class="text-muted mb-0">React.js</p>
+              <p class="text-muted mb-0">D3.js</p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 text-center">
+            <div class="service-box mt-5 mx-auto raleway-projects">
+              <i class="fa fa-4x fa-cogs icon-primary mb-3 sr-icons"></i>
+              <h3 class="skill-title mb-3">Back-end</h3>
+              <p class="text-muted mb-0">Node.js</p>
+              <p class="text-muted mb-0">Express.js</p>
+              <p class="text-muted mb-0">Knex.js</p>
+              <p class="text-muted mb-0">SQL</p>
+              <p class="text-muted mb-0">PostgreSQL</p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 text-center">
+            <div class="service-box mt-5 mx-auto raleway-projects">
+              <i class="fa fa-4x fa-check-square-o icon-primary mb-3 sr-icons"></i>
+              <h3 class="skill-title mb-3">Test driven <br> development</h3>
+              <p class="text-muted mb-0">Chai</p>
+              <p class="text-muted mb-0">Mocha</p>
+              <p class="text-muted mb-0">Supertest</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="p-0 raleway" id="portfolio">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading portfolio-heading">Most recent project</h2>
+            <hr class="my-4 project-line">
+          </div>
+        </div>
+      </div>
+      <div class="container container-center">
+      </div>
+      <div class="container-fluid p-0">
+        <div class="row no-gutters">
+          <!--  Mountain project preview -->
+          <div class="col-lg-6 col-sm-12 image-tile container-center" id="mountain-project">
+            <a class="portfolio-box" href=# data-toggle="modal" data-target=".mp" tabindex="0">
               <img class="img-fluid" src="img/portfolio/thumbnails/mountain_project_proposal.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -151,75 +152,77 @@
                 </div>
               </div>
             </a>
-        </div>
+          </div>
 
-        <!-- Mountain Project modal -->
-        <div class="modal fade mp" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-          <div class="modal-dialog modal-lg" id="mp_modal">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title">THE CLIMBING COMMUNITY AND INCLUSION</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <!-- Mountain Project modal -->
+          <div class="modal fade mp" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" id="mp_modal">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title">THE CLIMBING COMMUNITY AND INCLUSION</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                  <span aria-hidden="true">&times;</span>
                 </button>
-              </div>
-              <div class="modal-body raleway-projects">
-                <p>
-                  <strong>Core value:</strong> Empower Mountain Project users to report inappropriate route names to foster a safe,
-                  accessible, and inclusive online experience.
-                  <br><br>
-                  <strong>Skills:</strong> HTML, CSS, web accessibility, user testing.
-                </p>
-                <div class="links-group">
-                  <a href="https://www.youtube.com/watch?v=jdjHQ-HdMik" target="_blank" class="project-link">Download a copy</a>
                 </div>
-                <iframe src="https://drive.google.com/file/d/1ge2t_O0vFbbqW9jhNQWHm1kZA1Y6491n/preview" width="100%" height="480"></iframe>
+                <div class="modal-body raleway-projects">
+                  <p>
+                    <strong>Core value:</strong> Empower Mountain Project users to report inappropriate route names to foster a safe, accessible, and inclusive online experience.
+                    <br><br>
+                    <strong>Skills:</strong> HTML, CSS, web accessibility, user testing.
+                  </p>
+                  <div class="links-group">
+                    <a href="https://www.youtube.com/watch?v=jdjHQ-HdMik" target="_blank" class="project-link">Download a copy</a>
+                  </div>
+                  <iframe src="https://drive.google.com/file/d/1ge2t_O0vFbbqW9jhNQWHm1kZA1Y6491n/preview" width="100%" height="480"></iframe>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    </div>
-  </section>
-  <section id="contact">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 mx-auto text-center">
-          <h2 class="section-heading">Call me, beep me, <br> if you wanna reach me</h2>
-          <hr class="my-4">
+      </div>
+    </section>
+    <section id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto text-center">
+            <h2 class="section-heading">Contact info</h2>
+            <hr class="my-4">
+          </div>
+        </div>
+        <div class="row raleway-projects">
+          <div class="col-lg-4 ml-auto text-center">
+            <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
+            <p>337-581-9349</p>
+          </div>
+          <div class="col-lg-4 mr-auto text-center">
+            <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
+            <p>
+              <a href="mailto:mafutomo@gmail.com">mafutomo@gmail.com</a>
+            </p>
+          </div>
+        </div>
+        <br><br>
+        <div class="row raleway-projects">
+          <div class="col-lg-4 ml-auto text-center">
+            <i class="fa fa-linkedin-square fa-3x mb-3 sr-contact"></i>
+            <p>
+              <a href="https://www.linkedin.com/in/melissa-utomo/" target="_blank">/melissa-utomo</a>
+            </p>
+          </div>
+          <div class="col-lg-4 mr-auto text-center">
+            <i class="fa fa-github fa-3x mb-3 sr-contact"></i>
+            <p>
+              <a href="https://github.com/mafutomo" target="_blank">/mafutomo</a>
+            </p>
+          </div>
         </div>
       </div>
-      <div class="row raleway-projects">
-        <div class="col-lg-4 ml-auto text-center">
-          <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
-          <p>337-581-9349</p>
-        </div>
-        <div class="col-lg-4 mr-auto text-center">
-          <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
-          <p>
-            <a href="mailto:mafutomo@gmail.com">mafutomo@gmail.com</a>
-          </p>
-        </div>
-      </div>
-      <br><br>
-      <div class="row raleway-projects">
-        <div class="col-lg-4 ml-auto text-center">
-          <i class="fa fa-linkedin-square fa-3x mb-3 sr-contact"></i>
-          <p>
-            <a href="https://www.linkedin.com/in/melissa-utomo/" target="_blank">/melissa-utomo</a>
-          </p>
-        </div>
-        <div class="col-lg-4 mr-auto text-center">
-          <i class="fa fa-github fa-3x mb-3 sr-contact"></i>
-          <p>
-            <a href="https://github.com/mafutomo" target="_blank">/mafutomo</a>
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
-  <p class="copyright">&#9400; 2020 Melissa Utomo</p>
+    </section>
+  </main>
+  <footer>
+    <p class="copyright">&#9400; 2020 Melissa Utomo</p>
+  </footer>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
