fixed overlay issue in mobile and updated portfolio

--- a/index.html
+++ b/index.html
@@ -145,10 +145,11 @@
                     Design + User Testing + Front-end
                   </div>
                   <div class="project-name raleway">
-                    The climbing community and inclusion
+                    Mountain Project feature proposal
                   </div>
                   <br>
-                  <p class="project-description raleway-projects">Proposal addressed to Mountain Project and REI to add a flagging feature on their existing web tool that documents rock climbing routes.</p>
+                  <p class="project-description raleway-projects">Click to see the document</p>
+                  <!-- <p class="project-description raleway-projects">Proposal addressed to Mountain Project and REI to add a flagging feature on their existing web tool that documents rock climbing routes.</p> -->
                 </div>
               </div>
             </a>
@@ -159,21 +160,17 @@
             <div class="modal-dialog modal-lg" id="mp_modal">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title">THE CLIMBING COMMUNITY AND INCLUSION</h5>
+                  <h5 class="modal-title">MOUNTAIN PROJECT FEATURE PROPOSAL</h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                  <span aria-hidden="true">&times;</span>
                 </button>
                 </div>
                 <div class="modal-body raleway-projects">
-                  <p>
-                    <strong>Core value:</strong> Empower Mountain Project users to report inappropriate route names to foster a safe, accessible, and inclusive online experience.
-                    <br><br>
-                    <strong>Skills:</strong> HTML, CSS, web accessibility, user testing.
-                  </p>
-                  <div class="links-group">
-                    <a href="https://www.youtube.com/watch?v=jdjHQ-HdMik" target="_blank" class="project-link">Download a copy</a>
+                  <div class="container-center">
+                    <button href="" class="btn-primary" target="_blank">Download PDF copy</button>
+                    <hr>
                   </div>
-                  <iframe src="https://drive.google.com/file/d/1ge2t_O0vFbbqW9jhNQWHm1kZA1Y6491n/preview" width="100%" height="480"></iframe>
+                  <iframe src="https://drive.google.com/file/d/1ge2t_O0vFbbqW9jhNQWHm1kZA1Y6491n/preview" width="100%" height="500"></iframe>
                 </div>
               </div>
             </div>
