--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     Mountain Project feature proposal
                   </div>
                   <br>
-                  <p class="project-description raleway-projects">Click to see the document</p>
+                  <p class="project-description raleway-projects">Access document</p>
                   <!-- <p class="project-description raleway-projects">Proposal addressed to Mountain Project and REI to add a flagging feature on their existing web tool that documents rock climbing routes.</p> -->
                 </div>
               </div>
