--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>Melissa Utomo</title>
+  <title>Melissa Utomo's personal site</title>
   <!-- Bootstrap core CSS -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -55,10 +55,10 @@
           <h1 class="main-intro">
               <strong>Hi, I'm Melissa</strong>
             </h1>
-          <hr>
+          <hr aria-hidden="true">
         </div>
         <div class="col-lg-8 mx-auto">
-          <p class="mb-5 subheading-intro raleway">she &#183; her &#183; hers </p>
+          <p class="mb-5 subheading-intro raleway" title="pronouns">she &middot; her &middot; hers </p>
         </div>
       </div>
     </div>
@@ -69,8 +69,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">Web Developer &#183; UI Designer</h2>
-            <hr class="my-4">
+            <h2 class="section-heading text-white">Web Developer &middot; UI Designer</h2>
+            <hr aria-hidden="true" class="my-4">
             <p class="text-enlarge text-white mb-4 text-lite bio-paragraph">
               I love JavaScript and nerd out on ways we can make our online experiences more accessible - whether that's choosing the right color pallet, coding accessible animations, or developing for screen readers.
               <br><br> On the weekends, you can find me rock climbing at Boulder Canyon or trail running at Marshall Mesa.
@@ -83,7 +83,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading">My skills</h2>
-            <hr class="my-4">
+            <hr aria-hidden="true" class="my-4">
           </div>
         </div>
       </div>
@@ -93,8 +93,8 @@
             <div class="service-box mt-5 mx-auto raleway-projects">
               <i class="fa fa-4x fa-paint-brush icon-primary mb-3 sr-icons"></i>
               <h3 class="skill-title mb-3">Front-end</h3>
-              <p class="text-muted mb-0 ">HTML5 &#183; CSS &#183; SASS</p>
-              <p class="text-muted mb-0">JavaScript &#183; ES6 &#183; jQuery</p>
+              <p class="text-muted mb-0 ">HTML5 &middot; CSS &middot; SASS</p>
+              <p class="text-muted mb-0">JavaScript &middot; ES6 &middot; jQuery</p>
               <p class="text-muted mb-0">React.js</p>
               <p class="text-muted mb-0">D3.js</p>
             </div>
@@ -127,7 +127,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading portfolio-heading">Most recent project</h2>
-            <hr class="my-4 project-line">
+            <hr aria-hidden="true" class="my-4 project-line">
           </div>
         </div>
       </div>
@@ -141,11 +141,10 @@
               <img class="img-fluid" src="img/portfolio/thumbnails/mountain_project_proposal.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded raleway">
-                    Design + User Testing + Front-end
+                  <div class="project-category text-faded raleway">Mountain Project feature proposal
                   </div>
                   <div class="project-name raleway">
-                    Mountain Project feature proposal
+                    Design + User Testing + Front-end
                   </div>
                   <br>
                   <p class="project-description raleway-projects">Access document</p>
@@ -167,7 +166,7 @@
                 </div>
                 <div class="modal-body raleway-projects">
                   <div class="container-center">
-          
+
                   </div>
                   <iframe src="https://drive.google.com/file/d/1ge2t_O0vFbbqW9jhNQWHm1kZA1Y6491n/preview" width="100%" height="500"></iframe>
                 </div>
@@ -183,18 +182,18 @@
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading">Contact info</h2>
-            <hr class="my-4">
+            <hr aria-hidden="true" class="my-4">
           </div>
         </div>
         <div class="row raleway-projects">
           <div class="col-lg-4 ml-auto text-center">
             <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
-            <p>337-581-9349</p>
+            <p title="phone number">337-581-9349</p>
           </div>
           <div class="col-lg-4 mr-auto text-center">
             <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
             <p>
-              <a href="mailto:mafutomo@gmail.com">mafutomo@gmail.com</a>
+              <a href="mailto:mafutomo@gmail.com" title="email address">mafutomo@gmail.com</a>
             </p>
           </div>
         </div>
@@ -203,13 +202,13 @@
           <div class="col-lg-4 ml-auto text-center">
             <i class="fa fa-linkedin-square fa-3x mb-3 sr-contact"></i>
             <p>
-              <a href="https://www.linkedin.com/in/melissa-utomo/" target="_blank">/melissa-utomo</a>
+              <a href="https://www.linkedin.com/in/melissa-utomo/" title="linked in address">/melissa-utomo</a>
             </p>
           </div>
           <div class="col-lg-4 mr-auto text-center">
             <i class="fa fa-github fa-3x mb-3 sr-contact"></i>
             <p>
-              <a href="https://github.com/mafutomo" target="_blank">/mafutomo</a>
+              <a href="https://github.com/mafutomo" title="github address">/mafutomo</a>
             </p>
           </div>
         </div>
@@ -217,7 +216,7 @@
     </section>
   </main>
   <footer>
-    <p class="copyright">&#9400; 2020 Melissa Utomo</p>
+    <p class="copyright">&copy; 2020 Melissa Utomo</p>
   </footer>
 
   <!-- Bootstrap core JavaScript -->
