--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">Web Developer &middot; UI Designer</h2>
+            <h2 title="occupation" class="section-heading text-white">Web Developer &middot; UI Designer</h2>
             <hr aria-hidden="true" class="my-4">
             <p class="text-enlarge text-white mb-4 text-lite bio-paragraph">
               I love JavaScript and nerd out on ways we can make our online experiences more accessible - whether that's choosing the right color pallet, coding accessible animations, or developing for screen readers.
@@ -168,7 +168,7 @@
                   <div class="container-center">
 
                   </div>
-                  <iframe src="https://drive.google.com/file/d/1ge2t_O0vFbbqW9jhNQWHm1kZA1Y6491n/preview" width="100%" height="500"></iframe>
+                  <iframe src="https://drive.google.com/file/d/1ge2t_O0vFbbqW9jhNQWHm1kZA1Y6491n/preview" width="100%" height="600"></iframe>
                 </div>
               </div>
             </div>
