--- a/index.html
+++ b/index.html
@@ -134,26 +134,27 @@
       <div class="container container-center">
       </div>
       <div class="container-fluid p-0">
-        <div class="row no-gutters">
+        <div class="row project-container">
           <!--  Mountain project preview -->
-          <div class="col-lg-6 col-sm-12 image-tile container-center" id="mountain-project">
-            <a class="portfolio-box" href=# data-toggle="modal" data-target=".mp" tabindex="0">
+          <div class="col-lg-6 col-sm-12 image-tile" id="mountain-project">
+            <a class="portfolio-box" href=# data-toggle="modal" data-target=".mp">
               <img class="img-fluid" src="img/portfolio/thumbnails/mountain_project_proposal.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded raleway">Mountain Project feature proposal
                   </div>
                   <div class="project-name raleway">
-                    Design + User Testing + Front-end
+                    design + user testing + front-end
                   </div>
-                  <br>
-                  <p class="project-description raleway-projects">Access document</p>
-                  <!-- <p class="project-description raleway-projects">Proposal addressed to Mountain Project and REI to add a flagging feature on their existing web tool that documents rock climbing routes.</p> -->
                 </div>
               </div>
             </a>
           </div>
-
+        <div class="project-description">
+          <h3>Mountain Project feature proposal</h3>
+          <p>The core value of this feature is to empower Mountain Project users to report oppressive climbing route names to foster a safe, accessible, and inclusive online experience.</p>
+          <button type="button" data-toggle="modal" name="access proposal" id="mp-btn" data-target=".mp">Access proposal</button>
+        </div>
           <!-- Mountain Project modal -->
           <div class="modal fade mp" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg" id="mp_modal">
@@ -166,7 +167,6 @@
                 </div>
                 <div class="modal-body raleway-projects">
                   <div class="container-center">
-
                   </div>
                   <iframe src="https://drive.google.com/file/d/1ge2t_O0vFbbqW9jhNQWHm1kZA1Y6491n/preview" width="100%" height="600"></iframe>
                 </div>
