--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link rel='icon' href='./favicon.ico' type='image/x-icon' />
-  <!-- Plugin CSS -->
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
-  <!-- Custom styles for this template -->
   <link href="./main.css" rel="stylesheet">
-  <!-- Custom fonts for this template -->
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
@@ -126,23 +123,31 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading portfolio-heading">Most recent project</h2>
+            <h2 class="section-heading portfolio-heading">Projects</h2>
             <hr aria-hidden="true" class="my-4 project-line">
           </div>
         </div>
       </div>
-      <div class="container container-center">
-      </div>
       <div class="container-fluid p-0">
-        <div class="row project-container">
+        <!--  Publications  -->
+        <div class="container-fluid">
+          <h3 class="skill-title container-center" id="publications">Publications of my work</h3>
+          <div class="row project-container publication-group">
+              <a href="esource.com/001201fm36/accessibility-color">Accessibility in Color</a>
+              <a href="esource.com/10262-001/designing-new-e-source-website">Designing the New E Source Website</a>
+
+          </div>
+        </div>
+        <h3 class="skill-title container-center" id="most-recent">Most recent</h3>
+        <div class="row project-container most-recent-container">
           <!--  Mountain project preview -->
           <div class="col-lg-6 col-sm-12 image-tile" id="mountain-project">
             <a class="portfolio-box" href=# data-toggle="modal" data-target=".mp">
               <img class="img-fluid" src="img/portfolio/thumbnails/mountain_project_proposal.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded raleway">Mountain Project feature proposal
-                  </div>
+                  <h3 class="project-category text-faded raleway" >Mountain Project feature proposal
+                  </h3>
                   <div class="project-name raleway">
                     design + user testing + front-end
                   </div>
@@ -151,7 +156,7 @@
             </a>
           </div>
         <div class="project-description">
-          <h3>Mountain Project feature proposal</h3>
+          <h4>Mountain Project feature proposal</h4>
           <p>The core value of this feature is to empower Mountain Project users to report oppressive climbing route names to foster a safe, accessible, and inclusive online experience.</p>
           <button type="button" data-toggle="modal" name="access proposal" id="mp-btn" data-target=".mp">Access proposal</button>
         </div>
@@ -160,14 +165,12 @@
             <div class="modal-dialog modal-lg" id="mp_modal">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h3 class="modal-title">MOUNTAIN PROJECT FEATURE PROPOSAL</h3>
+                  <h4 class="modal-title">MOUNTAIN PROJECT FEATURE PROPOSAL</h4>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                  <span aria-hidden="true">&times;</span>
                 </button>
                 </div>
                 <div class="modal-body raleway-projects">
-                  <div class="container-center">
-                  </div>
                   <iframe src="https://drive.google.com/file/d/1ge2t_O0vFbbqW9jhNQWHm1kZA1Y6491n/preview" width="100%" height="600"></iframe>
                 </div>
               </div>
