updated publishing links

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
         <div class="container-fluid">
           <h3 class="skill-title container-center" id="publications">Publications of my work</h3>
           <div class="row project-container publication-group">
-              <a href="esource.com/001201fm36/accessibility-color">Accessibility in Color</a>
-              <a href="esource.com/10262-001/designing-new-e-source-website">Designing the New E Source Website</a>
+              <a href="https://www.esource.com/001201fm36/accessibility-color">Accessibility in Color</a>
+              <a href="https://www.esource.com/10262-001/designing-new-e-source-website">Designing the New E Source Website</a>
 
           </div>
         </div>
