--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 title="occupation" class="section-heading text-white">Web Developer &middot; UI Designer</h2>
+            <h2 title="occupation" class="section-heading text-white">Web&nbsp;Developer &middot; UI&nbsp;Designer</h2>
             <hr aria-hidden="true" class="my-4">
             <p class="text-enlarge text-white mb-4 text-lite bio-paragraph">
               I love JavaScript and nerd out on ways we can make our online experiences more accessible - whether that's choosing the right color pallet, coding accessible animations, or developing for screen readers.
@@ -138,6 +138,7 @@
 
           </div>
         </div>
+        <br>
         <h3 class="skill-title container-center" id="most-recent">Most recent</h3>
         <div class="row project-container most-recent-container">
           <!--  Mountain project preview -->
