--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav" role="navigation">
     <div class="container">
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu</button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
@@ -88,23 +86,23 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto raleway-projects">
-              <i class="fa fa-4x fa-paint-brush icon-primary mb-3 sr-icons"></i>
+              <i class="fa fa-4x fa-cogs icon-primary mb-3 sr-icons"></i>
               <h3 class="skill-title mb-3">Front-end</h3>
-              <p class="text-muted mb-0 ">HTML5 &middot; CSS &middot; SASS</p>
+              <p class="text-muted mb-0 ">HTML5 &middot; CSS &middot; SCSS</p>
               <p class="text-muted mb-0">JavaScript &middot; ES6 &middot; jQuery</p>
               <p class="text-muted mb-0">React.js</p>
+              <p class="text-muted mb-0">R Shiny</p>
               <p class="text-muted mb-0">D3.js</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto raleway-projects">
-              <i class="fa fa-4x fa-cogs icon-primary mb-3 sr-icons"></i>
-              <h3 class="skill-title mb-3">Back-end</h3>
-              <p class="text-muted mb-0">Node.js</p>
-              <p class="text-muted mb-0">Express.js</p>
-              <p class="text-muted mb-0">Knex.js</p>
-              <p class="text-muted mb-0">SQL</p>
-              <p class="text-muted mb-0">PostgreSQL</p>
+              <i class="fa fa-4x fa-paint-brush icon-primary mb-3 sr-icons"></i>
+              <h3 class="skill-title mb-3">Web design</h3>
+              <p class="text-muted mb-0">Wireframing</p>
+              <p class="text-muted mb-0">Adobe products</p>
+              <p class="text-muted mb-0">User testing</p>
+              <p class="text-muted mb-0">WCAG 2.1 compliance</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 text-center">
@@ -113,7 +111,7 @@
               <h3 class="skill-title mb-3">Test driven <br> development</h3>
               <p class="text-muted mb-0">Chai</p>
               <p class="text-muted mb-0">Mocha</p>
-              <p class="text-muted mb-0">Supertest</p>
+              <p class="text-muted mb-0">Jest & Enzyme</p>
             </div>
           </div>
         </div>
@@ -184,17 +182,17 @@
     <section id="contact">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 mx-auto text-center">
+          <div class="col-lg-8 mt-5 mx-auto text-center">
             <h2 class="section-heading">Contact info</h2>
             <hr aria-hidden="true" class="my-4">
           </div>
         </div>
         <div class="row raleway-projects">
-          <div class="col-lg-4 ml-auto text-center">
+          <div class="col-lg-4 mt-5 ml-auto text-center">
             <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
             <p title="phone number">337-581-9349</p>
           </div>
-          <div class="col-lg-4 mr-auto text-center">
+          <div class="col-lg-4 mt-5 mr-auto text-center">
             <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
             <p>
               <a href="mailto:mafutomo@gmail.com" title="email address">mafutomo@gmail.com</a>
@@ -203,13 +201,13 @@
         </div>
         <br><br>
         <div class="row raleway-projects">
-          <div class="col-lg-4 ml-auto text-center">
+          <div class="col-lg-4 mt-5 ml-auto text-center">
             <i class="fa fa-linkedin-square fa-3x mb-3 sr-contact"></i>
             <p>
               <a href="https://www.linkedin.com/in/melissa-utomo/" title="linked in address">/melissa-utomo</a>
             </p>
           </div>
-          <div class="col-lg-4 mr-auto text-center">
+          <div class="col-lg-4 mt-5 mr-auto text-center">
             <i class="fa fa-github fa-3x mb-3 sr-contact"></i>
             <p>
               <a href="https://github.com/mafutomo" title="github address">/mafutomo</a>
